<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard_1"
    android:id="@+id/drawer_layout"
  >

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        android:theme="@style/navigationTheme"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#f8f8ff">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/lightblue"
            android:padding="5dp"
            android:src="@drawable/add_icon" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:background="@color/lightblue"
            android:padding="5dp"
            android:src="@drawable/feedback"
            android:id="@+id/feedback"
            android:onClick="feedback"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/logo_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28sp" />



                <RelativeLayout
                    android:background="@color/colorWhite"
                    android:elevation="8dp"
                    android:layout_below="@id/app_name"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_width="wrap_content"
                        android:text="@string/search_text" />

                    <ImageView
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_height="30dp"
                        android:layout_marginRight="15dp"
                        android:layout_width="30dp"
                        android:src="@drawable/search_icon" />

                </RelativeLayout>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card_1"
                        android:elevation="8dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/dashboard_calling" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00000000"
                            android:onClick="dashboard_call"/>

                    </RelativeLayout>

                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/calling"
                        android:textAlignment="center" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card_2"
                        android:elevation="8dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp">

                        <ImageView
                            android:layout_centerInParent="true"
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@drawable/dashboard_location" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00000000"
                            android:onClick="dashboard_location" />

                    </RelativeLayout>

                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/location"
                        android:textAlignment="center" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card_3"
                        android:elevation="8dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp">

                        <ImageView
                            android:layout_centerInParent="true"
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@drawable/dashboard_sms" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#00000000"
                            android:onClick="dashboard_sms"/>

                    </RelativeLayout>

                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/sms"
                        android:textAlignment="center" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:background="@drawable/card_4"
                        android:elevation="8dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_width="60dp">

                        <ImageView
                            android:layout_centerInParent="true"
                            android:layout_height="30dp"
                            android:layout_width="30dp"
                            android:src="@drawable/dashboard_alert" />

                    </RelativeLayout>

                    <TextView
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/alert"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginLeft="20dp"
                android:background="#F5F2D0">
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="280dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:background="#F0EAD6"
                    android:id="@+id/featuredbackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allcategories"
                        android:textSize="23dp"
                        android:textColor="@color/colorBlack"
                        android:layout_marginTop="50dp"
                        android:layout_marginLeft="10dp"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="141dp"
                        android:background="#00000000"
                        android:text="View All"
                        android:onClick="viewAll_security"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"


                        />




                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    android:layout_toRightOf="@id/featuredbackground"
                    android:background="#FAF0E6">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mostviewed"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/viewall"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>



                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ms_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"

                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/viewall"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:id="@+id/categories_recycler"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>